# Zinkd

./: .gitignore  Cargo.toml  Dicey Dungeons.js  README.md  index.html  styles.css  updateAssets.sh
.github/workflows/: release.yaml
assets/sprites/: DieFaces.xcf  goal.aseprite  item_weight.aseprite  item_weight_l.aseprite  p1.aseprite  p2.aseprite
assets/tiles/: tile_corner.aseprite  tile_cross1.aseprite  tile_cross2.aseprite  tile_dead_end.aseprite  tile_straight.aseprite  tile_straight_h.aseprite  tile_wall.aseprite
lib/: dice.rs  items.rs  lib.rs  map.rs  npc.rs  player.rs
licenses/: CREDITS
src/: about.rs  dice.rs  game.rs  main.rs  main_menu.rs  map.rs  settings.rs
wasm/: Dicey Dungeons.js  index.html
