[package]
name = "zinkd"
version = "0.2.0"
edition = "2021"
authors = ["Arc676/Alessandro Vinciguerra <alesvinciguerra@gmail.com>", "Fatcat560 <s.mario95@googlemail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
ron = "0.7"
directories-next = "2.0.0"
bevy = "0.6.1"
bevy_egui = "0.11"
rand = "0.8.5"
num-complex = "0.4"
num-traits = "0.2.14"

[features]
default = ["serde"]

[lib]
name = "zinkd"
path = "lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "zinkd"
path = "src/main.rs"
